Deploy preview for PR 617 🛫

--- a/pr-preview/pr-617/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/index.html
+++ b/pr-preview/pr-617/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/index.html
@@ -7379,13 +7379,13 @@ reynolds_lambda = 72.41  # Example value</div>
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
-<div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=e89399d7-0b18-4eaf-8e67-809a5fef7009">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
+<div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=e89399d7-0b18-4eaf-8e67-809a5fef7009">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [4]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="CodeMirror cm-s-jupyter">
 <div class="zeroclipboard-container">
 <clipboard-copy ,="" aria-label="Copy to Clipboard" for="cell-3">
@@ -7669,22 +7669,6 @@ reynolds_lambda = 72.41  # Example value</div>
 kernel_values = kernel_calc(
     particle_radius, turbulent_dissipation, reynolds_lambda
 )</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-<div class="jp-OutputArea jp-Cell-outputArea">
-<div class="jp-OutputArea-child">
-<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
-<pre>C:\GitHub\particula\particula\dynamics\coagulation\turbulent_dns_kernel\g12_radial_distribution_ao2008.py:151: RuntimeWarning: overflow encountered in exp
-  return 0.1886 * np.exp(20.306 / reynolds_lambda)
-C:\GitHub\particula\particula\dynamics\coagulation\turbulent_dns_kernel\g12_radial_distribution_ao2008.py:127: RuntimeWarning: overflow encountered in power
-  return y_stokes / (gravity_term**f3_lambda)
-</pre>
 </div>
 </div>
 </div>
