Deploy preview for PR 622 🛫

--- a/pr-preview/pr-622/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Fluid_and_Particle_Properties_Comparison/index.html
+++ b/pr-preview/pr-622/Discussions/Technical/Cloud_Droplet_Coagulation/DNS_Fluid_and_Particle_Properties_Comparison/index.html
@@ -7387,11 +7387,11 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 <li>To validate the accuracy of the <code>Particula</code> library in computing fluid and particle properties relevant to cloud droplet coagulation.
 <strong>Reference Tables:</strong></li>
 <li><strong>Table 2:</strong> Provides values for Reynolds number, inertia time, settling velocity, and correction factors for different particle sizes.</li>
-<li><strong>Table 3:</strong> Includes characteristic scales for cloud droplets, such as Stokes numbers and scaled velocities at various turbulent dissipation rates.
-<strong>Reference Paper:</strong>
-Ayala, O., Rosa, B., Wang, L. P., &amp; Grabowski, W. W. (2008). Effects of turbulence on the geometric collision rate of sedimenting droplets. Part 1. Results from direct numerical simulation. <em>New Journal of Physics</em>, 10. <a href="https://doi.org/10.1088/1367-2630/10/7/075015">https://doi.org/10.1088/1367-2630/10/7/075015</a>
-By conducting this comparison, we aim to ensure that the <code>Particula</code> library produces reliable results that align with established literature, which is crucial for accurate simulations in aerosol science and cloud physics.</li>
+<li><strong>Table 3:</strong> Includes characteristic scales for cloud droplets, such as Stokes numbers and scaled velocities at various turbulent dissipation rates.</li>
 </ul>
+<p><strong>Reference Paper:</strong>
+Ayala, O., Rosa, B., Wang, L. P., &amp; Grabowski, W. W. (2008). Effects of turbulence on the geometric collision rate of sedimenting droplets. Part 1. Results from direct numerical simulation. <em>New Journal of Physics</em>, 10. <a href="https://doi.org/10.1088/1367-2630/10/7/075015">https://doi.org/10.1088/1367-2630/10/7/075015</a>
+By conducting this comparison, we aim to ensure that the <code>Particula</code> library produces reliable results that align with established literature, which is crucial for accurate simulations in aerosol science and cloud physics.</p>
 </div>
 </div>
 </div>
