Deploy preview for PR 622 🛫

--- a/pr-preview/pr-622/Discussions/Technical/Cloud_Droplet_Coagulation/Droplet_Coagulation_Kernel_Ayala2008/index.html
+++ b/pr-preview/pr-622/Discussions/Technical/Cloud_Droplet_Coagulation/Droplet_Coagulation_Kernel_Ayala2008/index.html
@@ -7486,7 +7486,7 @@
 <p>v′^{(i)}_p: Particle RMS fluctuation velocity. The root mean square of the fluctuating velocity component, representing variability in turbulent flow.</p>
 </li>
 <li>
-<p><span class="arithmatex">\(f_u\)</span>: Particle response coefficient. Measures how particles respond to fluid velocity fluctuations, helping quantify their turbulent motion.</p>
+<p>f_u: Particle response coefficient. Measures how particles respond to fluid velocity fluctuations, helping quantify their turbulent motion.</p>
 </li>
 <li>
 <p>f(R): Spatial correlation coefficient. Describes the correlation of fluid velocities at two points separated by a distance R, influencing droplet interactions.</p>
