Deploy preview for PR 656 🛫

--- a/pr-preview/pr-656/index.html
+++ b/pr-preview/pr-656/index.html
@@ -506,7 +506,7 @@
           <p><em>Predict Experiments, Expand Your Insights</em></p>
           
             <a
-              href="https://github.com/uncscode/particula/How-To-Guides/Setup_Particula/"
+              href="#pypi-installation"
               title= "Setup Particula"
               class="md-button md-button--primary"
             >
