Deploy preview for PR 656 🛫

--- a/pr-preview/pr-656/index.html
+++ b/pr-preview/pr-656/index.html
@@ -450,9 +450,9 @@
       }
     }
     .mdx-hero__content {
-      flex: 1 1 50%;
+      flex: 1 1 80%;
       /* text-align: left; */
-      padding: px2rem(20px);
+      padding: px2rem(10px);
     }
     .mdx-hero__image {
       flex: 1 1 50%;
@@ -497,8 +497,8 @@
       <div class="mdx-hero">
         <!-- Text content on the left -->
         <div class="mdx-hero__content">
-          <h1>Particula</h1>
-          <p><em>Predict Experiments, Expand Your Insights.</em></p>
+          <h1>Fast-Track Your Thesis — Cut through complexity, validate with ease, and publish sooner than you thought possible.</h1>
+          <h2><em>Particula's flexible, reproducible workflows keep pace with your changing research goals, accelerating every step of your journey.</em></h2>
           <a
             href="#get-started-with-particula"
             title= "Get Started with Particula"
@@ -522,8 +522,8 @@
           <img
             src="images/icon_dark_clear.svg"
             alt="Particula icon"
-            width="400"
-            height="400"
+            width="500"
+            height="500"
             draggable="false"
           >
         </div>
