Deploy preview for PR 717 🛫

--- a/pr-preview/pr-717/contribute/CONTRIBUTING/index.html
+++ b/pr-preview/pr-717/contribute/CONTRIBUTING/index.html
@@ -8087,7 +8087,7 @@ Your contribution is now part of <strong>Particula</strong>—thank you!</p>
 </tr>
 <tr>
 <td><strong>Large changes</strong></td>
-<td>Open an <strong>discussion</strong> first and discuss design before implementation.</td>
+<td>Open a <strong>discussion</strong> first and discuss design before implementation.</td>
 </tr>
 </tbody>
 </table>
