--- a/pr-preview/pr-720/Theory/OpenAI_Models/index.html
+++ b/pr-preview/pr-720/Theory/OpenAI_Models/index.html
@@ -7909,7 +7909,7 @@ retrieval‑augmented‑generation (<strong>RAG</strong>) pipeline:</p>
 <tr>
 <td><a href="Models/Chat/">1. Chat</a></td>
 <td>Conversational &amp; multimodal I/O (vector‑RAG enriched)</td>
-<td>gpt‑4o, gpt‑4o‑mini, gpt‑4.1, gpt‑4.1‑mini/‑nano</td>
+<td>gpt‑4o, gpt‑4.1, gpt‑4.1‑mini/‑nano</td>
 </tr>
 <tr>
 <td><a href="Models/Reasoning/">2. Reasoning</a></td>
