Deploy preview for PR 721 🛫

--- a/pr-preview/pr-721/contribute/Code_Specifications/Details/Class_docstring_format/index.html
+++ b/pr-preview/pr-721/contribute/Code_Specifications/Details/Class_docstring_format/index.html
@@ -8408,6 +8408,8 @@ Analyze all Class definitions provided and improve their docstrings for clarity,
              [DOI](link)
            - &quot;Article Title,&quot;
              [Wikipedia](link).
+        &quot;&quot;&quot;
+        return (value1 * value2) / self.param1
        ```
 </code></pre></div>
 <ol>
