Deploy preview for PR 721 🛫

--- a/pr-preview/pr-721/contribute/Code_Specifications/Details/Function_docstring_format/index.html
+++ b/pr-preview/pr-721/contribute/Code_Specifications/Details/Function_docstring_format/index.html
@@ -8424,6 +8424,7 @@
 <span class="sd">        - &quot;Article Title&quot;,</span>
 <span class="sd">          [Wikipedia](link)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+    <span class="k">return</span> <span class="p">(</span><span class="n">param1</span> <span class="o">*</span> <span class="n">param2</span><span class="p">)</span> <span class="o">/</span> <span class="n">CONSTANT</span>
 </code></pre></div>
 <ul>
 <li><strong>Mathematical Equation Representation:</strong>  </li>
