Deploy preview for PR 738 🛫

--- a/pr-preview/pr-738/contribute/CONTRIBUTING/index.html
+++ b/pr-preview/pr-738/contribute/CONTRIBUTING/index.html
@@ -9011,17 +9011,17 @@ editable install) see the
 <tr>
 <td><strong>uv (fast, minimal)</strong></td>
 <td><code>uv venv .venv</code><br><code>source .venv/bin/activate</code><br><code>uv pip install -e ".[dev,extra]"</code></td>
-<td><a href="../Examples/Setup_Particula/Details/Setup_UV/">uv setup guide</a></td>
+<td><a href="../../Examples/Setup_Particula/Details/Setup_UV/">uv setup guide</a></td>
 </tr>
 <tr>
 <td><strong>pip + venv</strong></td>
 <td><code>python -m venv .venv</code><br><code>source .venv/bin/activate</code><br><code>pip install -e ".[dev,extra]"</code></td>
-<td><a href=".../Examples/Setup_Particula/Details/Setup_Pip/">pip setup guide</a></td>
+<td><a href="../../Examples/Setup_Particula/Details/Setup_PIP/">pip setup guide</a></td>
 </tr>
 <tr>
 <td><strong>conda</strong></td>
 <td><code>conda create -n particula-dev</code><br><code>conda activate particula-dev</code><br><code>pip install -e ".[dev,extra]"</code></td>
-<td><a href="../Examples/Setup_Particula/Details/Setup_Conda/">conda setup guide</a></td>
+<td><a href="../../Examples/Setup_Particula/Details/Setup_Conda/">conda setup guide</a></td>
 </tr>
 </tbody>
 </table>
