Deploy preview for PR 738 🛫

--- a/pr-preview/pr-738/contribute/CONTRIBUTING/index.html
+++ b/pr-preview/pr-738/contribute/CONTRIBUTING/index.html
@@ -9150,7 +9150,7 @@ Your contribution is now part of <strong>Particula</strong>—thank you!</p>
 </tr>
 <tr>
 <td><strong>Docstrings</strong></td>
-<td>Follow the templates in <a href="Code_Specifications/Detials/Function_docstring_format.md">Function docstring format</a> and <a href="Code_Specifications/Detials/Class_docstring_format.md">Class docstring format</a>. One‑line summary + details + sections (<code>Arguments</code>, <code>Returns</code>, <code>Raises</code>, <code>Examples</code>, <code>References</code>).</td>
+<td>Follow the templates in <a href="../Code_Specifications/Details/Function_docstring_format/">Function docstring format</a> and <a href="../Code_Specifications/Details/Class_docstring_format/">Class docstring format</a>. One‑line summary + details + sections (<code>Arguments</code>, <code>Returns</code>, <code>Raises</code>, <code>Examples</code>, <code>References</code>).</td>
 </tr>
 <tr>
 <td><strong>Typing</strong></td>
@@ -9158,7 +9158,7 @@ Your contribution is now part of <strong>Particula</strong>—thank you!</p>
 </tr>
 <tr>
 <td><strong>Tests</strong></td>
-<td>Every public function/class must have at least one <code>pytest</code> test. Aim for coverage ≥ 90 %.  See <a href="Feature_Workflow/Add_Unit_Test.md">Add Unit Tests</a>.</td>
+<td>Every public function/class must have at least one <code>pytest</code> test. Aim for coverage ≥ 90 %.  See <a href="../Feature_Workflow/Details/Add_Unit_Test/">Add Unit Tests</a>.</td>
 </tr>
 <tr>
 <td><strong>Commit messages</strong></td>
