--- a/pr-preview/pr-765/Theory/Technical/Dynamics/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/index.html
+++ b/pr-preview/pr-765/Theory/Technical/Dynamics/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/index.html
@@ -7972,6 +7972,7 @@
       </a>
       <a href="/particula/Theory/Technical/Dynamics/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/DNS_Kernel_Comparison.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8896,6 +8897,7 @@
       </a>
       <a href="/particula/Theory/Technical/Dynamics/Cloud_Droplet_Coagulation/DNS_Kernel_Comparison/DNS_Kernel_Comparison.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
