--- a/pr-preview/pr-765/Examples/Aerosol/Aerosol_Tutorial/index.html
+++ b/pr-preview/pr-765/Examples/Aerosol/Aerosol_Tutorial/index.html
@@ -4974,6 +4974,7 @@
       </a>
       <a href="/particula/Examples/Aerosol/Aerosol_Tutorial/Aerosol_Tutorial.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8844,6 +8845,7 @@
       </a>
       <a href="/particula/Examples/Aerosol/Aerosol_Tutorial/Aerosol_Tutorial.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
