--- a/pr-preview/pr-765/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation/index.html
+++ b/pr-preview/pr-765/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation/index.html
@@ -5117,6 +5117,7 @@
       </a>
       <a href="/particula/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation/Chamber_Forward_Simulation.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8873,6 +8874,7 @@
       </a>
       <a href="/particula/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation/Chamber_Forward_Simulation.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
