--- a/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_2_PDF/index.html
+++ b/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_2_PDF/index.html
@@ -5528,6 +5528,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_2_PDF/Coagulation_Basic_2_PDF.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -9091,6 +9092,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_2_PDF/Coagulation_Basic_2_PDF.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
