--- a/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_3_compared/index.html
+++ b/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_3_compared/index.html
@@ -5551,6 +5551,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_3_compared/Coagulation_Basic_3_compared.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8947,6 +8948,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_3_compared/Coagulation_Basic_3_compared.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
