--- a/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved/index.html
+++ b/pr-preview/pr-765/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved/index.html
@@ -5574,6 +5574,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved/Coagulation_Basic_4_ParticleResolved.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8866,6 +8867,7 @@
       </a>
       <a href="/particula/Examples/Dynamics/Coagulation/Functional/Coagulation_Basic_4_ParticleResolved/Coagulation_Basic_4_ParticleResolved.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
