--- a/pr-preview/pr-765/Examples/Equilibria/Notebooks/activity_part1/index.html
+++ b/pr-preview/pr-765/Examples/Equilibria/Notebooks/activity_part1/index.html
@@ -5937,6 +5937,7 @@
       </a>
       <a href="/particula/Examples/Equilibria/Notebooks/activity_part1/activity_part1.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8882,6 +8883,7 @@
       </a>
       <a href="/particula/Examples/Equilibria/Notebooks/activity_part1/activity_part1.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
