--- a/pr-preview/pr-765/Examples/Particle_Phase/Notebooks/Aerosol_Distributions/index.html
+++ b/pr-preview/pr-765/Examples/Particle_Phase/Notebooks/Aerosol_Distributions/index.html
@@ -6490,6 +6490,7 @@
       </a>
       <a href="/particula/Examples/Particle_Phase/Notebooks/Aerosol_Distributions/Aerosol_Distributions.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8930,6 +8931,7 @@
       </a>
       <a href="/particula/Examples/Particle_Phase/Notebooks/Aerosol_Distributions/Aerosol_Distributions.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
