--- a/pr-preview/pr-765/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions/index.html
+++ b/pr-preview/pr-765/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions/index.html
@@ -6631,6 +6631,7 @@
       </a>
       <a href="/particula/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions/Activity_Functions.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8902,6 +8903,7 @@
       </a>
       <a href="/particula/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions/Activity_Functions.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
