--- a/pr-preview/pr-765/Theory/Accelerating_Python/Details/Taichi_Exploration/index.html
+++ b/pr-preview/pr-765/Theory/Accelerating_Python/Details/Taichi_Exploration/index.html
@@ -7255,6 +7255,7 @@
       </a>
       <a href="/particula/Theory/Accelerating_Python/Details/Taichi_Exploration/Taichi_Exploration.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
@@ -8975,6 +8976,7 @@
       </a>
       <a href="/particula/Theory/Accelerating_Python/Details/Taichi_Exploration/Taichi_Exploration.ipynb"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7z"/></svg>
