Deploy preview for PR 778 🛫

--- a/pr-preview/pr-778/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions/index.html
+++ b/pr-preview/pr-778/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions/index.html
@@ -9788,15 +9788,8 @@ Biomass burning aerosols (soot + organics + water) play a critical role in c
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<details> <summary>▶️ Install Particula</summary>
-try:
-    import google.colab
-except ImportError:
-    # not Colab → do nothing
-    pass
-else:
-    # in Colab → install quietly
-    get_ipython().system("pip install particula[extra] --quiet")
+<details> <summary>Install Particula Command</summary>
+!pip install particula[extra] --quiet
 </details>
 </div>
 </div>
